2003-04-06  Brian Warner  <warner@lothar.com>

	* twisted/trial/{unittest.py,remote.py}, twisted/test/test_trial.py:
	Collapse most reportFoo methods into a single reportResults() that
	takes a resultType parameter. This anticipates the addition of .todo
	test-case flags that will add two more resultTypes.
	* twisted/trial/unittest.py: Add .todo flags: creates EXPECTED_FAILURE
	and UNEXPECTED_SUCCESS resultTypes. Like .skip, the .todo can be
	added either to the TestCase object or as a method attribute.

2003-04-04  Kevin Turner  <acapnotic@twistedmatrix.com>

	* twisted/scripts/trial.py: Now takes whatever you throw at it on
	the command line, be it a filename, or a dotted python name for a
	package, module, TestCase, or test method; you no longer need to
	use the -pmcfM switches (unless you really want to).

	* twisted/protocols/htb.py: Egress traffic shaping for Consumers
	and Transports, using Heirarchial Token Buckets, patterened after
	Martin Devera's Hierarchical Token Bucket traffic shaper for the
	Linux kernel.

	* doc/examples/shaper.py: Demonstration of shaping traffic on a
	web server.

	* twisted/protocols/pcp.py: Producer/Consumer proxy, for when you
	wish to install yourself between a Producer and a Consumer and
	subvert the flow of data.

2003-04-04  Itamar Shtull-Trauring  <itamar@itamarst.org>

	* twisted/web/microdom.py: parseXML and parseXMLString functions
	that are setup to use the correct settings for strict XML parsing
	and manipulation.

2003-03-31  Brian Warner  <warner@lothar.com>

	* twisted/trial/unittest.py: use SkipTest's argument as a reason
	and display it in the test results instead of the traceback. Allow
	test methods and TestCase classes to define a .skip attribute
	instead of raising SkipTest.

2003-03-31  Kevin Turner  <acapnotic@twistedmatrix.com>

	* twisted/trial/remote.py: machine-readable trial output to allow
	for the test runner and the results Reporter to be in seperate
	processes.
